# paper_implementations

./: README.md
map_closures_python/: .gitignore  .gitmodules  README.md  covariance.py  density.py  kiss_icp.yaml  kitti360_dataloader.py  kitti_file_format.py  lie_algebra.py  local_map_bev.py  local_map_management.py  loop_closure_detector.py  loop_closure_expirementation.py  main.py  offline_mapclosure_detection.py  pgo.py  pipeline.py  profiler.py  pyproject.toml  ransac_c2c.py  registration.py  se3_alignment.py  setup.py  utils.py  venv.sh
map_closures_python/cython_modules/: unique_cy.pyx  voxel_types.pxd  voxel_types.pyx
map_closures_python/dependencies/g2o-python/: setup.py
map_closures_python/dependencies/g2o-python/g2o/: CMakeLists.txt  __init__.py
map_closures_python/dependencies/g2o-python/g2o/g2o/apps/g2o_viewer/: viewer_properties_widget.h
map_closures_python/dependencies/g2o-python/g2o/g2o/core/: optimizable_graph.cpp
map_closures_python/dependencies/g2o-python/g2o/g2o/types/data/: data_queue.cpp
map_closures_python/dependencies/g2o-python/g2o/g2o/types/slam2d_addons/: edge_line2d.h
map_closures_python/dependencies/g2o-python/g2o/python/: CMakeLists.txt
map_closures_python/dependencies/g2o-python/g2o/python/examples/: ba_anchored_inverse_depth_demo.py  ba_demo.py  gicp_demo.py  gicp_sba_demo.py  sba_demo.py  sba_demo2.py  simple_optimize.py  type_in_python.py
map_closures_python/dependencies/g2o-python/g2o/unit_test/test_helper/: allocate_optimizer.h
map_closures_python/testing/: unique_cy_test.py
