[project]
name = "map-closures-python"
version = "0.1.0"
description = "A Python implementation of "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cmake>=4.1.0",
    "kiss-icp>=1.2.3",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "open3d>=0.19.0",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.3.2",
    "pybind11>=3.0.1",
    "scipy>=1.14.0",
    "tqdm>=4.66.0",
]

[tool.ruff]
include=["*.py"]
line-length=150
indent-width=4


[tool.ruff.format]
docstring-code-format = false
indent-style="space"
